--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-  <input type="number" id = "indexOnloadFile" min="1"/>
+  <input type="number" id = "indexOnloadFile" min="1" value="1"/>
 
   <input type="file" id = "onloadfile" onchange="encodeImageFileAsURL(this)" accept=".jpg, .jpeg, .png ,.ico" />
-
+ 
   <img src="" id = "foto" style="width:140px;height: 160px;">  
   
 
